media/css/firefox/os/firefox-os.less
/* ... */
html[lang="pl"] {
  #have-it-all .scroller-on {
    #stage #landing-heading {
      top: 210px;
    }
  }
}

#mission {
  color: @textColorTertiary;
  position: relative;
  background: #d3dae2;
  z-index: 101;
  .open-sans-light();
}

#transform-the-future {
  padding: (@baseLine * 2) 0;
  text-align: center;
  h2, p {
    width: 70%;
    margin: 0 auto;
  }
  p {
    margin: @baseLine auto;
  }
}

#our-community {
  position: relative;
  overflow: hidden;
  section {
    float: right;
    width: 460px;
  }
  .bubbles {
    float: left;
    width: 452px;
    height: 446px;
    background: transparent url('/media/img/firefox/os/bubbles.png') no-repeat top left;
  }
}

#best-of-the-web {
  position: relative;
  margin: 0 auto;
  .content {
    float: left;
    width: 460px;
    margin-top: 60px;
  }
  img {
    float: right;
    max-width: 100%;
    height: auto;
    margin-top: -140px;
  }
}

#useful-links {
  overflow: visible;
  padding: (@baseLine * 4) 0;
  .column {
    width: (@widthDesktop - (@gridGutterWidth * 2))/2;
    float: left;
  }
  .column-first {
    width: ((@widthDesktop - (@gridGutterWidth * 2))/2) - @baseLine;
    margin-right: @baseLine;
  }
  h3 {
    font-size: 32px;
    letter-spacing: -1px;
    padding-left: 5px;
  }
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }
  ul li {
    float: left;
    width: 430px;
    font-size: 22px;
    letter-spacing: -1px;
    .open-sans-light();
    padding: @gridGutterWidth;
    background: #fff;
    margin: 5px;
    a {
      display: block;
      font-size: 16px;
      color: #149fd3;
      letter-spacing: 0px;
      &:after {
        content: "\00A0\00BB";
      }
    }
  }
}

// get phone default no-JS styles
#get-phone {
  padding: @baseLine;
  margin: 0 auto @baseLine auto;
  background: #fff;
  header {
    display: none;
  }
  h2 {
    font-size: 26px;
    color: #666;
    letter-spacing: -1px;
    padding-bottom: (@baseLine * 2);
    margin-bottom: @baseLine;
  }
}

#provider-text-multi,
#provider-text-single {
  display: none;
}

// email signup form no-JS styles
#email-form-content {
  h3 {
    font-size: 26px;
    line-height: 32px;
    text-shadow: none;
  }
  header {
    display: none;
  }
}

#footer-email-thanks {
  display: none;
}

#footer-email-form {
  width: @widthDesktop - (@gridGutterWidth * 4);
  margin: 0 auto @baseLine auto;
  background: #fff;
  border: 0;
  box-shadow: none;
  a {
    color: #47b8e4;
    text-decoration: underline;
  }
}

#footer-email-errors {
  width: @widthDesktop - (@gridGutterWidth * 2);
  margin: 0 auto;
}
/* ... */

